--- a/src/antd-variables.less
+++ b/src/antd-variables.less
@@ -6,4 +6,11 @@ found in https://github.com/vueComponent/ant-design-vue/blob/master/components/s
 @import '~ant-design-vue/dist/antd.less';
 
 // Here are the variables to cover, such as:
-@primary-color: rgb(74, 42, 127);
+@primary-color: #FFC647; // primary color for all components
+@link-color: #17C6E9; // link color
+@success-color: #52c41a; // success state color
+@warning-color: #FFC647; // warning state color
+@error-color: #f5222d; // error state color
+
+// Layout
+@layout-body-background: white;
