--- a/src/antd-variables.less
+++ b/src/antd-variables.less
@@ -4,6 +4,7 @@ found in https://github.com/vueComponent/ant-design-vue/blob/master/components/s
 */
 
 @import '~ant-design-vue/dist/antd.less';
+@import url('https://fonts.googleapis.com/css?family=Heebo&display=swap');
 
 // Here are the variables to cover, such as:
 @primary-color: #FFC647; // primary color for all components
@@ -11,6 +12,8 @@ found in https://github.com/vueComponent/ant-design-vue/blob/master/components/s
 @success-color: #52c41a; // success state color
 @warning-color: #FFC647; // warning state color
 @error-color: #f5222d; // error state color
+
+@font-family: 'Heebo', sans-serif;
 
 // Layout
 @layout-body-background: white;
